--- a/index.html
+++ b/index.html
@@ -14,6 +14,55 @@
 
 <body>
 
+    <div class="container" id="main-forms-container">
+        <div class="chips" id="ingredients">
+        </div>
+        <div class="row" id="form-row">
+
+            <form class="col s12" id="form-column">˜
+
+
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    <i class="material-icons right">send</i>
+                </button>
+            </form>
+        </div>
+
+        <div class="row" id="chips-row">
+
+            <div class="col s12" id="chips-column">
+
+            </div>
+        </div>
+
+        <div class="row" id="submit-row">
+
+            <div class="col s12" id="submit-column">
+
+
+            </div>
+        </div>
+
+
+
+    </div>
+
+    <div id="main-container" class="container">
+
+        <div id="results-header-row" class="row">
+            <div id="results-header-col" class="col s12 center-align ">
+                <h2>Results</h2>
+            </div>
+        </div>
+        <div id="results-recipe-row" class="row">
+            <div id="results-recipe-col" class="col s12 center-align z-depth-2">
+                <h2>Recipe</h2>
+                <img src="./images/food-pic.jpeg" alt="" class="responsive-img" alt="recipe-test">
+            </div>
+        </div>
+
+    </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
