--- a/index.html
+++ b/index.html
@@ -12,63 +12,101 @@
 
 </head>
 
+<nav>
+    <div class="nav-wrapper orange darken-4 ">
+        <a href="#" class="brand-logo center"><i class="material-icons">restaurant</i> </a>
+
+        <ul id="nav-mobile" class="left hide-on-med-and-down ">
+            <li><a href="sass.html">Saved</a></li>
+            <li><a href="badges.html">Results</a></li>
+        </ul>
+    </div>
+</nav>
+
 <body>
 
-    <div class="container" id="main-forms-container">
-        <div class="chips" id="ingredients">
-        </div>
-        <div class="row" id="form-row">
-
-            <form class="col s12" id="form-column">˜
 
 
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                    <i class="material-icons right">send</i>
-                </button>
-            </form>
-        </div>
+    <div class="container" id="main-forms-container ">
+        <div class="row">
 
-        <div class="row" id="chips-row">
+            <div class="col s12" id="card-col">
 
-            <div class="col s12" id="chips-column">
+                <div class="card blue-grey lighten-1 z-depth-5" id="search-card ">
+                    <div class="card-image">
+                        <img style="opacity: .8" src="./images/food header.jpg">
+                        <div class="card-content white-text ">
+                            <!-- <span class="card-title center-align"><strong>Recipe Generator:</strong></span> -->
+                            <!-- <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                                class="material-icons">add</i></a> -->
+                            <h2> Recipe Generator:</h2>
+                            <i class="material-icons ">assignment</i>
+                            <p class="flow-text"> Add ingredients you have in your fridge and get
+                                a list of recipes that include your ingredients:</p>
+                        </div>
 
+                        <div class="row" id="chip-form">
+
+                            <div class="chips" id="ingredients">
+                                <input placeholder="Add Ingredients Here; One at a time">
+                            </div>
+
+                            
+
+                        </div>
+                        <div class="row" id="form-row">
+
+                            <form class="col s12" id="form-column">
+
+
+
+                                <button class="btn waves-effect waves-light" type="submit" name="action">Search for
+                                    Recipes!
+                                    <i class="material-icons right">send</i>
+                                </button>
+
+
+
+                            </form>
+
+                        </div>
+                        <div class="card-action" id='clear-items-btn'>
+                            <a href="#">Clear All Items</a>
+
+                        </div>
+                    </div>
+
+                </div>
             </div>
+
+
         </div>
 
-        <div class="row" id="submit-row">
+        <div id="main-container" class="container">
 
-            <div class="col s12" id="submit-column">
-
-
+            <div id="results-header-row" class="row">
+                <div id="results-header-col" class="col s12 center-align ">
+                    <h2>Results</h2>
+                    <p id="result"></p>
+                </div>
             </div>
-        </div>
+            <div id="results-recipe-row" class="row">
+                <div id="results-recipe-col" class="col s12 center-align z-depth-2">
+                    <h2>Recipe</h2>
 
 
-
-    </div>
-
-    <div id="main-container" class="container">
-
-        <div id="results-header-row" class="row">
-            <div id="results-header-col" class="col s12 center-align ">
-                <h2>Results</h2>
+                    <img src="./images/food-pic.jpeg" alt="" class="responsive-img" alt="recipe-test">
+                </div>
             </div>
-        </div>
-        <div id="results-recipe-row" class="row">
-            <div id="results-recipe-col" class="col s12 center-align z-depth-2">
-                <h2>Recipe</h2>
-                <img src="./images/food-pic.jpeg" alt="" class="responsive-img" alt="recipe-test">
-            </div>
+
         </div>
 
-    </div>
 
 
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="./script.js"></script>
 
 </body>
 
