created recipe list with image

--- a/prototype.html
+++ b/prototype.html
@@ -65,7 +65,7 @@
         <div id="results-recipe-row" class="row">
             <div id="results-recipe-col" class="col s12 center-align z-depth-2">
                 <h2>Recipe</h2>
-
+                <div id="recipe-view"></div>
                
                 <img src="./images/food-pic.jpeg" alt="" class="responsive-img" alt="recipe-test">
             </div>
@@ -78,7 +78,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./Prototype.js"></script>
+    <script src="./prototype.js"></script>
 
 </body>
 
