new file structure merged

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="col s12" id="card-col">
 
-                <div class="card blue-grey lighten-1 z-depth-5" id="search-card ">
+                <div class="card blue-grey lighten-1 z-depth-5" id="search-card">
                     <div class="card-image">
                         <img style="opacity: .8" src="./images/food header.jpg">
                         <div class="card-content white-text ">
@@ -51,7 +51,7 @@
                                 <input placeholder="Add Ingredients Here; One at a time">
                             </div>
 
-                            
+
 
                         </div>
                         <div class="row" id="form-row">
@@ -93,12 +93,11 @@
             <div id="results-recipe-row" class="row">
                 <div id="results-recipe-col" class="col s12 center-align z-depth-2">
                     <h2>Recipe</h2>
-
+                    <div id="recipe-view"></div>
 
                     <img src="./images/food-pic.jpeg" alt="" class="responsive-img" alt="recipe-test">
                 </div>
             </div>
-
         </div>
 
 
