--- a/prototype.html
+++ b/prototype.html
@@ -49,5 +49,18 @@
     <script src="./prototype.js"></script>
 
 </body>
+<div id="main-container" class="container">
+    <div id="results-header-row" class="row">
+        <div id="results-header-col" class="col s12 center-align ">
+            <h2>Results</h2>
+        </div>
+    </div>
+    <div id="results-recipe-row" class="row">
+        <div id="results-recipe-col" class="col s12 center-align z-depth-2">
+            <h2>Recipe</h2>
+           
+        </div>
+    </div>
+</div>
 
 </html>
