--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul id="nav-mobile" class="left hide-on-med-and-down ">
             <li><a href="sass.html">Saved</a></li>
             <li><a href="badges.html">Results</a></li>
+            
         </ul>
     </div>
 </nav>
@@ -30,10 +31,10 @@
         <div class="row">
 
             <div class="col s12" id="card-col">
-
+                
                 <div class="card blue-grey lighten-1 z-depth-5" id="search-card">
                     <div class="card-image">
-                        <img style="opacity: .8" src="./images/food header.jpg">
+                       <!--<img style="opacity: .8" src="./images/food header.jpg">
                         <div class="card-content white-text ">
                             <!-- <span class="card-title center-align"><strong>Recipe Generator:</strong></span> -->
                             <!-- <a class="btn-floating halfway-fab waves-effect waves-light red"><i
