clear all button code added, print recipe results header dynamic printing added

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="nav-wrapper orange darken-4 ">
         <a href="#" class="brand-logo center"><i class="material-icons">restaurant</i> </a>
 
-        <ul id="nav-mobile" class="left hide-on-med-and-down ">
+        <!-- <ul id="nav-mobile" class="left hide-on-med-and-down ">
             <li><a href="sass.html">Saved</a></li>
             <li><a href="badges.html">Results</a></li>
-        </ul>
+        </ul> -->
     </div>
 </nav>
 
@@ -47,7 +47,7 @@
                         <div class="row" id="chip-form">
 
                             <div class="chips" id="ingredients">
-                                <input placeholder="Add Ingredients Here; One at a time">
+                                <input placeholder="Add Ingredients">
                             </div>
 
 
@@ -70,7 +70,7 @@
 
                         </div>
                         <div class="card-action" id='clear-items-btn'>
-                            <a href="#">Clear All Items</a>
+                            <a href="#">Clear All</a>
 
                         </div>
                     </div>
@@ -85,16 +85,16 @@
 
             <div id="results-header-row" class="row">
                 <div id="results-header-col" class="col s12 center-align ">
-                    <h2>Results</h2>
+                    <h3 id="result-h3"></h3>
                     <p id="result"></p>
                 </div>
             </div>
             <div id="results-recipe-row" class="row">
-                <div id="results-recipe-col" class="col s12 center-align z-depth-2">
-                    <h2>Recipe</h2>
+                <div id="results-recipe-col" class="col s12 center-align ">
+                    <h2></h2>
                     <div id="recipe-view"></div>
 
-                    <img src="./images/food-pic.jpeg" alt="" class="responsive-img" alt="recipe-test">
+                   
                 </div>
             </div>
         </div>
