--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 
-    <div class="container" id="main-forms-container ">
+    <div class="container" id="main-forms-container">
         <div class="row">
 
             <div class="col s12" id="card-col">
@@ -81,10 +81,10 @@
 
         </div>
 
-        <div id="main-container" class="container">
+        <div id="main-results-container" class="container displayNone z-depth-5">
 
             <div id="results-header-row" class="row">
-                <div id="results-header-col" class="col s12 center-align ">
+                <div id="results-header-col" class="col s12 center-align  ">
                     <h3 id="result-h3"></h3>
                     <p id="result"></p>
                 </div>
@@ -94,10 +94,14 @@
                     <h2></h2>
                     <div id="recipe-view"></div>
 
-                   
+
                 </div>
+                <!-- scroll to top button -->
+                <!-- <a class="waves-effect waves-light btn" id="scrollTop">Scroll to Top</a> -->
             </div>
         </div>
+
+
 
 
 
@@ -107,5 +111,21 @@
         <script src="./script.js"></script>
 
 </body>
+
+
+
+<footer class="page-footer orange darken-4">
+    <div class="container">
+
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Andrew / Aaron / Chris / Sophie
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </div>
+
+</footer>
+
 
 </html>
