--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
         </div>
 
-        <div id="main-results-container" class="container displayNone z-depth-5">
+        <div id="main-results-container" class="container displayNone z-depth-5 blue-grey lighten-1">
 
             <div id="results-header-row" class="row">
-                <div id="results-header-col" class="col s12 center-align  ">
+                <div id="results-header-col" class="col s12 center-align white-text ">
                     <h3 id="result-h3"></h3>
                 </div>
             </div>
