scroll to top button works, and now returns 50 results

--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
                 </div>
             </div>
 
-            <div id="results-recipe-row" class="row">
+            <div id="results-recipe-row" class="row center-align">
                 <div id="results-recipe-col" class="col s12 center-align ">
                     
-                    <div id="recipe-view"></div>
+                    <div class="" id="recipe-view"></div>
 
 
                 </div>
                 <!-- scroll to top button -->
-                <!-- <a class="waves-effect waves-light btn" id="scrollTop">Scroll to Top</a> -->
+                <a class="waves-effect waves-light btn" id="scrollTop">Scroll to Top</a>
             </div>
         </div>
 
@@ -115,7 +115,7 @@
 
 
 <footer class="page-footer orange darken-4">
-    <div class="container">
+    <div id="footer">
 
         <div class="footer-copyright">
             <div class="container">
