clear all button now dynamically created

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             </form>
 
                         </div>
-                        <div class="card-action" id='clear-items-btn'>
+                        <div class="card-action displayNone" id='clear-items-btn'>
                             <a href="#">Clear All</a>
 
                         </div>
