--- a/index.html
+++ b/index.html
@@ -10,38 +10,47 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-
+<!-- 
 <nav>
     <div class="nav-wrapper orange darken-4 ">
+        <h4 class="center"> Recipe Generator</h1>
         <a href="#" class="brand-logo center"><i class="material-icons">restaurant</i> </a>
 
-        <!-- <ul id="nav-mobile" class="left hide-on-med-and-down ">
+        <ul id="nav-mobile" class="left hide-on-med-and-down ">
             <li><a href="sass.html">Saved</a></li>
             <li><a href="badges.html">Results</a></li>
-        </ul> -->
+        </ul>
     </div>
-</nav>
+</nav> -->
 
 <body>
-
-
+    <div>
+        <h1 class="center-align">Recipe Generator</h1>
+        <p class="flow-text center-align"><i class="material-icons ">done</i> Add ingredients you have in your fridge. <br><i class="material-icons ">assignment</i> Get
+            a list of recipes that include your ingredients!</p><br>
+    </div>
 
     <div class="container" id="main-forms-container">
         <div class="row">
 
             <div class="col s12" id="card-col">
 
-                <div class="card blue-grey lighten-1 z-depth-5" id="search-card">
+                <div class="card blue-grey lighten-1 z-depth-5 hoverable" id="search-card">
                     <div class="card-image">
-                        <img style="opacity: .8" src="./images/food header.jpg">
+                        <!-- <img style="opacity: .8" src="./images/food header.jpg"> -->
                         <div class="card-content white-text ">
                             <!-- <span class="card-title center-align"><strong>Recipe Generator:</strong></span> -->
                             <!-- <a class="btn-floating halfway-fab waves-effect waves-light red"><i
                                 class="material-icons">add</i></a> -->
-                            <h2> Recipe Generator:</h2>
-                            <i class="material-icons ">assignment</i>
-                            <p class="flow-text"> Add ingredients you have in your fridge and get
-                                a list of recipes that include your ingredients:</p>
+                            <!-- <h2> Recipe Generator:</h2> -->
+                            <!-- <i class="material-icons ">assignment</i> -->
+                            <!-- <p class="flow-text">» Add ingredients you have in your fridge. <br>» Get
+                                a list of recipes that include your ingredients!</p><br> -->
+                            <div class="white-text">
+                                <i class="material-icons left">touch_app</i>
+                                <p class="left"><em>Press the return key to add 1 ingredient at a time</em></p>
+                            </div>
+
                         </div>
 
                         <div class="row" id="chip-form">
@@ -52,14 +61,17 @@
 
 
 
+
                         </div>
+
                         <div class="row" id="form-row">
 
                             <form class="col s12" id="form-column">
 
 
 
-                                <button class="btn waves-effect waves-light" type="submit" name="action">Search for
+                                <button class="btn waves-effect waves-light hoverable white black-text" type="submit"
+                                    name="action">Search for
                                     Recipes!
                                     <i class="material-icons right">send</i>
                                 </button>
@@ -70,7 +82,7 @@
 
                         </div>
                         <div class="card-action displayNone" id='clear-items-btn'>
-                            <a href="#">Clear All</a>
+                            <a href="#"><i class="material-icons">refresh</i> Clear All</a>
 
                         </div>
                     </div>
@@ -91,7 +103,7 @@
 
             <div id="results-recipe-row" class="row center-align">
                 <div id="results-recipe-col" class="col s12 center-align ">
-                    
+
                     <div class="" id="recipe-view"></div>
 
 
@@ -114,16 +126,8 @@
 
 
 
-<footer class="page-footer orange darken-4">
-    <div id="footer">
-
-        <div class="footer-copyright">
-            <div class="container">
-                © 2019 Andrew / Aaron / Chris / Sophie
-                
-            </div>
-        </div>
-    </div>
+<footer>
+        <div><p class="center-align">© 2019 Aaron Robert Carter</p></div>
 
 </footer>
 
