--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="row" id="main-row">
         <div class="col l6 m12">
-            <h1 class="center-align">Recipe Generator</h1>
+            <h1 class="center-align">Recipe Generator</h1><br>
             <p class="flow-text center-align"><i class="material-icons ">done</i> Add ingredients you have in your
                 fridge.
                 <br><i class="material-icons ">assignment</i> Get
@@ -40,7 +40,7 @@
 
 
         <div class="col l6">
-            <div class="container" id="main-forms-container">
+            <div class="" id="main-forms-container">
                 <div class="row">
 
                     <div class="col l12" id="card-col">
