local storage added to clear all button

--- a/index.html
+++ b/index.html
@@ -10,26 +10,14 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<!-- 
-<nav>
-    <div class="nav-wrapper orange darken-4 ">
-        <h4 class="center"> Recipe Generator</h1>
-        <a href="#" class="brand-logo center"><i class="material-icons">restaurant</i> </a>
-
-        <ul id="nav-mobile" class="left hide-on-med-and-down ">
-            <li><a href="sass.html">Saved</a></li>
-            <li><a href="badges.html">Results</a></li>
-        </ul>
-    </div>
-</nav> -->
+ 
 
 <body>
 
     <div class="row" id="main-row">
         <div class="col l6 m12">
-            <h1 class="center-align">Recipe Generator</h1><br>
-            <p class="flow-text center-align"><i class="material-icons ">done</i> Add ingredients you have in your
-                fridge.
+            <h1 class="center-align title-text">Recipe Generator</h1><br>
+            <p class="flow-text center-align"><i class="material-icons ">done</i> Add ingredients you want to use.
                 <br><i class="material-icons ">assignment</i> Get
                 a list of recipes that include your ingredients!</p>
             <p class="center-align">
@@ -47,18 +35,9 @@
 
                         <div class="card blue-grey lighten-1 z-depth-5 hoverable" id="search-card">
                             <div class="card-image">
-                                <img style="opacity: .8" src="images/foodheader2.jpg">
+                                <img style="opacity: 1" src="images/foodheader2.jpg">
                                 <div class="card-content white-text ">
-                                    <!-- <span class="card-title center-align"><strong>Recipe Generator:</strong></span> -->
-                                    <!-- <a class="btn-floating halfway-fab waves-effect waves-light red"><i
-                                class="material-icons">add</i></a> -->
-                                    <!-- <h2> Recipe Generator:</h2> -->
-                                    <!-- <i class="material-icons ">assignment</i> -->
-                                    <!-- <p class="flow-text">» Add ingredients you have in your fridge. <br>» Get
-                                a list of recipes that include your ingredients!</p><br> -->
-                                    <div class="white-text">
-                                        <!-- <i class="material-icons left">touch_app</i>
-                                <p class="left"><em>Press the return key to add 1 ingredient at a time</em></p> -->
+                                    
                                     </div>
 
                                 </div>
