background image set

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
 
                     <div class="col l12" id="card-col">
 
-                        <div class="card blue-grey lighten-1 z-depth-5 hoverable" id="search-card">
+                        <div style="opacity: .8" class="card blue-grey lighten-1 z-depth-5 hoverable" id="search-card">
                             <div class="card-image">
-                                <img style="opacity: 1" src="images/foodheader2.jpg">
+                                <img style="" src="images/foodheader2.jpg">
                                 <div class="card-content white-text ">
                                     
                                     </div>
 
                                 </div>
 
-                                <div class="row" id="chip-form">
+                                <div  style="o" class="row" id="chip-form">
 
-                                    <div class="chips" id="ingredients">
+                                    <div style="" class="chips" id="ingredients">
                                         <input placeholder="Add Ingredients">
                                     </div>
 
@@ -59,7 +59,7 @@
 
 
 
-                                        <button class="btn waves-effect waves-light hoverable white black-text"
+                                        <button style="opacity: 1" class="btn waves-effect waves-light hoverable white black-text"
                                             type="submit" name="action">Click for
                                             Recipes!
                                             <i class="material-icons right">send</i>
