--- a/index.html
+++ b/index.html
@@ -118,15 +118,17 @@
     </div>
 
     <div class="fixed-action-btn">
-            <a class="btn-floating btn-large tooltipped" data-position="left" data-tooltip="Scroll to Top" id="floating-scroll">
-              <i class="large material-icons">arrow_upward</i>
+            <a class="btn-floating btn-large blue">
+              <i class="large material-icons">menu</i>
             </a>
-            <!-- <ul>
-              <li><a id="floating-scroll" class="btn-floating red tooltipped" data-position="left" data-tooltip="I am a tooltip"> <i class="material-icons">arrow_upward</i></a></li>
-              <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-              <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-              <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-            </ul> -->
+            <ul>
+              <li><a class="btn-floating red pulse tooltipped" data-position="left" data-tooltip="Scroll to Top" id="floating-scroll">
+                    <i class="large material-icons">arrow_upward</i>
+                  </a></li>
+              
+              <li><a class="btn-floating green tooltipped" data-position="left" data-tooltip="Clear All" id="refresh-btn"><i class="material-icons">refresh</i></a></li>
+              
+            </ul>
           </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
