recipe opens in same tab now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <a href="#user"><img class="circle" src="./images/spoonacular-logo-b.svg"></a>
             <a href="#name"><span class="black-text name">Please log in:</span></a>
-            <a href="#email"><span class="black-text email">You must log in to Spoonacular to view
+            <a href="#email"><span class="black-text email">You must log in to Spoonacular to view full
                     recipes.</span></a>
         </div>
     </li>
